# ghostwriter

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  sync.py
.github/workflows/: publish.yml
docs/: index.html
src/ghostwriter/: __init__.py  __main__.py  cleaner.py  cli.py  config.py  ghost.py  lexical.py  normalize.py  pipeline.py  wechat.py
tests/: test_cleaner.py  test_config.py  test_lexical.py  test_normalize.py  test_pipeline.py
