[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghostwriter"
version = "0.1.0"
description = "Markdown → Ghost → WeChat publishing pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "yinguobing"},
]
dependencies = [
    "requests>=2.25",
    "PyJWT>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
ghostwriter = "ghostwriter.cli:main"

[project.urls]
Homepage = "https://github.com/yinguobing/ghostwriter"

[tool.hatch.build.targets.wheel]
packages = ["src/ghostwriter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
